--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav class="flex items-center justify-between px-4 md:px-8 bg-[#F5E2CF]">
       <!-- logo -->
       <a href="#">
-        <img src="assets/logo_red.png" alt="" class="h-10 md:h-16" />
+        <img src="logo_red.png" alt="" class="h-10 md:h-16" />
       </a>
       <!-- search & icons -->
       <div class="flex gap-4 items-center">
@@ -67,7 +67,7 @@
       <div id="hero" class="relative h-150 md:h-168 md:w-full overflow-hidden">
         <!-- Background image -->
         <img
-          src="assets/rayul-_M6gy9oHgII-unsplash.jpg"
+          src="rayul-_M6gy9oHgII-unsplash.jpg"
           alt=""
           class="absolute h-full w-full object-cover"
         />
@@ -334,3 +334,4 @@
     </main>
   </body>
 </html>
+
