--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 class="relative h-48 sm:h-64 lg:h-80 w-64 sm:w-sm lg:w-lg rounded-3xl lg:rounded-4xl overflow-hidden"
               >
                 <img
-                  src="assets/Women_fashion_new.jpg"
+                  src="Women_fashion_new.jpg"
                   alt=""
                   class="absolute h-full w-full object-cover"
                 />
@@ -138,7 +138,7 @@
                 class="relative h-48 sm:h-64 lg:h-80 w-48 sm:w-64 lg:w-80 rounded-3xl lg:rounded-4xl overflow-hidden"
               >
                 <img
-                  src="assets/Men_fashion1.jpg"
+                  src="Men_fashion1.jpg"
                   alt=""
                   class="absolute h-full w-full object-cover"
                 />
@@ -161,7 +161,7 @@
                 class="relative h-48 sm:h-64 lg:h-80 w-48 sm:w-64 lg:w-80 rounded-3xl lg:rounded-4xl overflow-hidden"
               >
                 <img
-                  src="assets/Cloths5.jpg"
+                  src="Cloths5.jpg"
                   alt=""
                   class="absolute h-full w-full object-cover"
                 />
@@ -190,7 +190,7 @@
                 class="relative h-48 sm:h-64 lg:h-80 w-48 sm:w-64 lg:w-80 rounded-3xl lg:rounded-4xl overflow-hidden"
               >
                 <img
-                  src="assets/Cloths2.jpg"
+                  src="Cloths2.jpg"
                   alt=""
                   class="absolute h-full w-full object-cover"
                 />
@@ -240,7 +240,7 @@
               <!-- image -->
               <div class="w-full md:w-1/2 h-56 sm:h-auto overflow-hidden">
                 <img
-                  src="assets/Cloths3.jpg"
+                  src="Cloths3.jpg"
                   alt=""
                   class="h-full w-full object-cover"
                 />
@@ -334,4 +334,5 @@
     </main>
   </body>
 </html>
+
 
