--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
           
         </div>
         <img
-          src="assets/logo_white.png"
+          src="logo_white.png"
           class="translate-y-16 md:translate-y-24 lg:-translate-y-8 w-full sm:translate-y-0 md:-mt-8"
           alt=""
         />
@@ -334,5 +334,6 @@
     </main>
   </body>
 </html>
+
 
 
