--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
       href="https://cdn.jsdelivr.net/npm/remixicon@4.6.0/fonts/remixicon.css"
       rel="stylesheet"
     />
-
-    <title>Document</title>
+    <link rel="icon" type="image/png" href="logo_red.png">
+    <title>Orin</title>
   </head>
   <body class="bg-white">
     <nav class="flex items-center justify-between px-4 md:px-8 bg-[#F5E2CF]">
@@ -334,6 +334,7 @@
     </main>
   </body>
 </html>
+
 
 
 
